# kerything

./: .gitignore  .project  CMakeLists.txt  DbusIndexerClient.cpp  DbusIndexerClient.h  FileModel.cpp  FileModel.h  GuiUtils.cpp  GuiUtils.h  MainWindow.cpp  MainWindow.h  NtfsUtils.cpp  NtfsUtils.h  PKGBUILD  PartitionDialog.cpp  PartitionDialog.h  README.md  RemoteFileModel.cpp  RemoteFileModel.h  ScannerEngine.cpp  ScannerEngine.h  ScannerManager.cpp  ScannerManager.h  ScannerUtils.cpp  ScannerUtils.h  SettingsDialog.cpp  SettingsDialog.h  Utils.cpp  Utils.h  Version.h  kerythingd.service  main.cpp  main_helper.cpp  net.reikooters.Kerything1.conf  net.reikooters.Kerything1.service  net.reikooters.kerything.desktop  net.reikooters.kerything.policy
kerythingd/: IndexerService.cpp  IndexerService.h  WatchManager.cpp  WatchManager.h  main.cpp
scanners/: Ext4ScannerEngine.cpp  Ext4ScannerEngine.h  NtfsScannerEngine.cpp  NtfsScannerEngine.h
